2003-07-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-arrived-add-1): Removed.
	(w3m-arrived-add): Reimplemented.
	(w3m-arrived-shutdown): Modify a predicate used for comparing
	arrived elements, to ensure that every URL precedes its variants
	with fragments.
	(w3m-goto-url): Check validity of a fragment of a given anchor,
	before passing it to `w3m-arrived-add'.

2003-07-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-cnet.el: Major change for the new CNET Japan site.
	(shimbun-cnet-url, shimbun-cnet-groups, shimbun-cnet-from-address,
	shimbun-cnet-content-start, shimbun-cnet-content-end): Do.
	(shimbun-cnet-server-name): New.
	(shimbun-index-url): Use the top page.
	(shimbun-get-headers): Rewrite.
	(shimbun-make-contents): Remove advertisements embedded with table
	forms.

2003-07-02  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el: Changes to handle the arrived database file generated by
	the developing version of emacs-w3m.
	(w3m-arrived-add): Do not call `w3m-last-modified'.
	(w3m-goto-url): Call `w3m-arrived-add' with a modified time and an
	arrived time.

	* w3m-bookmark.el (w3m-bookmark-add): Encode special characters
	included in a URL and a title.

	* w3m-antenna.el (w3m-antenna-check-all-sites): Use
	`w3m-antenna-alist' instead of `w3m-antenna-sites'; this change
	must have no ill effects because `w3m-use-setup' merges site
	informations kept by `w3m-antenna-sites' into `w3m-antenna-alist'.
	(w3m-about-antenna): Fix.
	(w3m-antenna-add-current-url): Encode special characters included
	in `w3m-current-title'.

	* w3m.el (w3m-encode-specials-string): New function.
	(w3m-rendering-extract-title): Simplified.
	(w3m-rendering-half-dump): Define as a normal function.
	(w3m-retrieve-and-render): Confirm at the top of this function.
	(w3m-about-db-history): Encode special characters in the title.
	(w3m-about-history): Encode special characters included in a title.

2003-07-01  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
